--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
